--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ec2-user/my-aws-app
-            git pull origin main
+            git pull
             ansible-playbook ansible/playbook.yml -e "image_tag=${GIT_COMMIT}"
