--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -32,7 +32,7 @@
 
     - name: Stop old container (if exists)
       community.docker.docker_container:
-        name: "{{ image_name }}"
+        name: my-api
         state: absent
         ignore_errors: true
 
