--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Get short commit hash
         id: vars
-        run: echo "GIT_COMMIT=$(git rev-parse --short HEAD)" 
+        run: echo "GIT_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Run Ansible Playbook on EC2
         uses: appleboy/ssh-action@master
@@ -26,4 +26,5 @@ jobs:
           script: |
             cd /home/ec2-user/my-aws-app
             git pull
+            echo GIT_COMMIT
             ansible-playbook ansible/playbook.yml -e "image_tag=${GIT_COMMIT}"
