--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
           script: |
             cd /home/ec2-user/my-aws-app
             git pull
-            print ${GIT_COMMIT}
+            echo ${GIT_COMMIT}
             ansible-playbook ansible/playbook.yml -e "image_tag=${GIT_COMMIT}"
