--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Get short commit hash
         id: vars
-        run: echo "GIT_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        run: echo "$(git rev-parse --short HEAD)" >> $GIT_COMMIT
 
       - name: Run Ansible Playbook on EC2
         uses: appleboy/ssh-action@master
