--- a/.github/workflows/ec2.yml
+++ b/.github/workflows/ec2.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - deploy_ecs
+      #- deploy_ecs
       #- main  # or whichever branch you use
 
 jobs:
