--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -22,16 +22,16 @@ jobs:
     - name: Log in to Amazon ECR
       run: |
         aws ecr get-login-password --region us-east-1 | \
-        docker login --username AWS --password-stdin 732095247734.dkr.ecr.eu-north-1.amazonaws.com
+        docker login --username AWS --password-stdin 732095247734.dkr.ecr.us-east-1.amazonaws.com
 
     - name: Build, tag and push Docker image
       run: |
         IMAGE_TAG=$(git rev-parse --short HEAD)
-        docker build -t flask-app:$IMAGE_TAG .
-        docker tag flask-app:$IMAGE_TAG 732095247734.dkr.ecr.eu-north-1.amazonaws.com/my-aws-app/flask-app:$IMAGE_TAG
-        docker push 732095247734.dkr.ecr.eu-north-1.amazonaws.com/my-aws-app/flask-app:$IMAGE_TAG
+        docker build -t my-api:$IMAGE_TAG .
+        docker tag my-api:$IMAGE_TAG 732095247734.dkr.ecr.us-east-1.amazonaws.com/my-aws-app/my-api:$IMAGE_TAG
+        docker push 732095247734.dkr.ecr.us-east-1.amazonaws.com/my-aws-app/my-api:$IMAGE_TAG
 
-    - name: Run Ansible to update ECS task
-      run: |
-        ansible-playbook deploy-to-ecs.yml -e image_tag=$(git rev-parse --short HEAD)
+#    - name: Run Ansible to update ECS task
+ #     run: |
+  #      ansible-playbook deploy-to-ecs.yml -e image_tag=$(git rev-parse --short HEAD)
 
