--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9
 
-#WORKDIR .
+WORKDIR app
 
-COPY requirements.txt .
+COPY app/requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY app.py .
+COPY app/app.py .
 
 EXPOSE 5000
 
