--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9
 
-WORKDIR app
+WORKDIR /app
 
-COPY app/requirements.txt .
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY app/app.py .
+COPY app.py .
 
 EXPOSE 5000
 
