--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -31,6 +31,11 @@ jobs:
         docker tag my-api:$IMAGE_TAG 732095247734.dkr.ecr.us-east-1.amazonaws.com/my-aws-app/my-api:$IMAGE_TAG
         docker push 732095247734.dkr.ecr.us-east-1.amazonaws.com/my-aws-app/my-api:$IMAGE_TAG
 
+    # install dependencies of aws ansible collection
+    - name: Install boto3 and botocore
+      run: |
+        pip install boto3 botocore
+
     - name: Run Ansible to update ECS task
       run: |
         ansible-playbook ansible/deploy-ecs.yml -e image_tag=$(git rev-parse --short HEAD)
