--- a/ansible/deploy-ecs.yml
+++ b/ansible/deploy-ecs.yml
@@ -13,6 +13,13 @@
     - name: Edit ECS task definition to use new image
       community.aws.ecs_taskdefinition:
         family: flask-app
+        network_mode: awsvpc
+        requires_compatibilities:
+          - FARGATE
+        cpu: 256
+        memory: 512
+        execution_role_arn: arn:aws:iam::732095247734:role/ecsTaskExecutionRole
+        task_role_arn: arn:aws:iam::732095247734:role/ecsTaskExecutionRole
         containers: 
           - name: "{{ container_name }}"
             image: "{{ image_repo }}:{{ image_tag }}"
