edit update ecs

--- a/ansible/deploy-ecs.yml
+++ b/ansible/deploy-ecs.yml
@@ -33,7 +33,17 @@
       community.aws.ecs_service:
         name: "{{ ecs_service }}"
         cluster: "{{ ecs_cluster }}"
-        task_definition: flask-app
+        task_definition: "{{ task_def_out.task_definition.task_definition_arn }}"
         desired_count: 1
-        force_new_deployment: true
+        launch_type: FARGATE
+        network_configuration:
+          awsvpc_configuration:
+            subnets:
+              - subnet-024bad37e2fe12ca5 
+              - subnet-04a6758938e0a3ca2 
+              - subnet-0e26f8a1bb629fad6
+            security_groups:
+              - sg-08736ffd0252f61e2
+            assign_public_ip: yes
+        state: present
         region: eu-north-1
