--- a/ansible/deploy-ecs.yml
+++ b/ansible/deploy-ecs.yml
@@ -28,6 +28,7 @@
                   protocol: tcp
         region: eu-north-1
         state: present
+        register: task_def_out
 
     - name: Update ECS service
       community.aws.ecs_service:
