--- a/ansible/deploy-ecs.yml
+++ b/ansible/deploy-ecs.yml
@@ -39,7 +39,7 @@
       community.aws.ecs_service:
         name: "{{ ecs_service }}"
         cluster: "{{ ecs_cluster }}"
-        task_definition: "{{ task_def_out.task_definition_arn }}"
+        task_definition: "{{ task_def_out.taskdefinition.taskDefinitionArn }}"
         desired_count: 1
         launch_type: FARGATE
         network_configuration:
